StereoKit/Native/NativeAPI.cs


		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              mesh_find           (string name);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_create         ();
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_copy           (IntPtr mesh);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern void                mesh_set_id         (IntPtr mesh, string id);
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              mesh_get_id         (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_addref         (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_release        (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_draw           (IntPtr mesh, IntPtr material, Matrix transform, Color color_linear, RenderLayer layer);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_keep_data  (IntPtr mesh, int keep_data);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_get_keep_data  (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_data       (IntPtr mesh, [In] Vertex[] in_arr_vertices, int vertex_count, [In] uint[] in_arr_indices, int index_count, int calculate_bounds);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_verts      (IntPtr mesh, [In] Vertex[] in_arr_vertices, int vertex_count, int calculate_bounds);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_get_verts      (IntPtr mesh, [Out] Vertex[] out_arr_vertices, out int out_vertex_count, Memory reference_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_get_vert_count (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_inds       (IntPtr mesh, [In] uint[] in_arr_indices, int index_count);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_get_inds       (IntPtr mesh, [Out] uint[] out_arr_indices, out int out_index_count, Memory reference_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_get_ind_count  (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_draw_inds  (IntPtr mesh, int index_count);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_bounds     (IntPtr mesh, in Bounds bounds);
		[DllImport(dll, CallingConvention = call                 )] public static extern Bounds              mesh_get_bounds     (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_has_skin       (IntPtr mesh);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_set_skin       (IntPtr mesh, [In] ushort[] in_arr_bone_ids_4, int bone_id_4_count, [In] Vec4[] in_arr_bone_weights, int bone_weight_count, in Matrix bone_resting_transforms, int bone_count);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                mesh_update_skin    (IntPtr mesh, [In] Matrix[] in_arr_bone_transforms, int bone_count);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_ray_intersect  (IntPtr mesh, Ray model_space_ray, out Ray out_pt, out uint out_start_inds, Cull cull_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_ray_intersect_bvh(IntPtr mesh, Ray model_space_ray, out Ray out_pt, out uint out_start_inds, Cull cull_mode);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 mesh_get_triangle   (IntPtr mesh, uint triangle_index, out Vertex out_a, out Vertex out_b, out Vertex out_c);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_plane      (Vec2 dimensions, Vec3 plane_normal, Vec3 plane_top_direction, int subdivisions, int double_sided);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_circle     (float diameter, Vec3 plane_normal, Vec3 plane_top_direction, int spokes, int double_sided);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_cube       (Vec3 dimensions, int subdivisions);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_sphere     (float diameter, int subdivisions);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_rounded_cube(Vec3 dimensions, float edge_radius, int subdivisions);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_cylinder   (float diameter, float depth, Vec3 direction, int subdivisions);
		[DllImport(dll, CallingConvention = call                 )] public static extern IntPtr              mesh_gen_cone       (float diameter, float depth, Vec3 direction, int subdivisions);

		///////////////////////////////////////////
